fix added overflow-y property to the main

--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,7 @@ main i{
     width: 85%;
     flex-wrap: wrap;
     align-content: flex-start;
+    overflow-y: auto;
 }
 .user-window{
     position: relative;
